--- a/css/Style.css
+++ b/css/Style.css
@@ -61,7 +61,7 @@ header nav ul {
 }
 .logo {
 	height: 60px;
-	content: url("../imagens/Netflix_logo_name.png");
+	content: url("Netflix_logo_name.png");
 }
 
 header nav a {
@@ -76,14 +76,14 @@ header nav a:hover {
 	position: relative;
 	height: 550px;
 	background-image: linear-gradient(to top, rgba(20, 20, 20, 0.9) 10%, rgba(20, 20, 20, 0) 60%),
-		linear-gradient(to bottom, rgba(20, 20, 20, 0.7) 10%, rgba(20, 20, 20, 0) 60%), url("../imagens/capa-house.jpg");
+		linear-gradient(to bottom, rgba(20, 20, 20, 0.7) 10%, rgba(20, 20, 20, 0) 60%), url("capa-house.jpg");
 	background-size: cover;
-	background-position: center;
+	background-position: center top;
 	display: flex;
 	justify-content: center;
 	align-items: flex-start;
 	flex-direction: column;
-	overflow: hidden; /* evita que o after vaze */
+	overflow: hidden;
 }
 
 .filme-principal::after {
@@ -116,7 +116,7 @@ header nav a:hover {
 	color: black;
 	font-size: 16px;
 	border-radius: 3px;
-	transition: 0.5 ease-all;
+	transition: 0.5 ease;
 }
 #info {
 	background-color: black;
